--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "react": "16.8.6",
     "react-chartjs-2": "2.7.6",
     "react-dom": "16.8.6",
+    "react-facebook-login": "^4.1.1",
     "react-google-maps": "9.4.5",
     "react-notification-alert": "0.0.12",
+    "react-redux": "^7.2.0",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
-    "reactstrap": "8.0.0"
+    "reactstrap": "8.0.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
